# bazel-temporal-fastapi

./: .bazelrc  .env.template  BUILD.bazel  MODULE.bazel  README.md  env.sh  py_layer.bzl  requirements.in  requirements_lock.txt
config/docker/: docker-compose-blob.yml  docker-compose-rdbms.yml  docker-compose-vault.yml  docker-compose-workflow.yml  docker-compose.blob.yml  docker-compose.local.overrides.yml  docker-compose.local.yml  docker-compose.overrides copy.yml  docker-compose.overrides.yml  docker-compose.rdbms.yml  docker-compose.service-api.yml  docker-compose.service-zipcode-worker.yml  docker-compose.vault.yml  docker-compose.workflow.yml  docker-compose.yml
config/docker/postgres-with-curl/: Dockerfile
config/docker/vault-seed/: Dockerfile  run.py
docs/design/images/: architecture.sw
docs/research/: patients_and_observations.ipynb
service/api/: BUILD.bazel  run.py  server.py
service/observation/: BUILD.bazel  activity.py  activity_test.py  extractor.py  extractor_test.py  model.py  shared.py
service/patient/: BUILD.bazel  activity.py  activity_test.py  extractor.py  extractor_test.py  model.py  shared.py
service/patient/data/test/: patient_with_next_url.json  patient_without_next_url.json
service/zipcode/: BUILD.bazel  model.py  shared.py  worker.py  workflow.py  workflow_test.py
tools/runner/: BUILD.bazel  defs.bzl
