bazel_dep(name = "rules_python", version = "0.37.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "third_party_deps",
    python_version = "3.12",
    requirements_lock = "//third_party:requirements_lock.txt",
)
use_repo(pip, "third_party_deps")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")
register_toolchains(
    "@python_3_12//:all"
)
bazel_dep(name = "rules_oci", version = "2.0.0")