load("@aspect_rules_py//py:defs.bzl", "py_library", "py_binary")
load("@third_party_deps//:requirements.bzl", "requirement")

py_library(
    name = "service_api",
    srcs = ["server.py"],
    deps = [
        requirement("fastapi"),
        requirement("pydantic"),
        requirement("sqlmodel"),
        "//library/meta:library_meta",
        "//library/storage:library_rdbms",
        "//service/patient:service_patient_shared",
        "//service/observation:service_observation_shared",
        "//service/zipcode:service_zipcode_workflow"
    ],
    visibility = ["//visibility:public"]
)

py_binary(
    name = "service_api_run",
    srcs = ["run.py"],
    main = "run.py",
    deps = [
        requirement("uvicorn"),  # Assuming you're using uvicorn to run the FastAPI app
        ":service_api", 
    ],
)
