load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@third_party_deps//:requirements.bzl", "requirement")
load("//tools/runner:defs.bzl", "pytest_runner")

py_library(
    name = "service_observation_shared",
    srcs = [
        "model.py", 
        "shared.py"
    ],
    deps = [
        "//library/storage:library_blob",
        "//service/patient:service_patient_shared"
    ],
    visibility = ["//visibility:public"]
)

py_library(
    name = "service_observation_workflow",
    srcs = [
        "activity.py",
        "extractor.py"
    ],
    deps = [
        requirement("aiohttp"),        
        requirement("temporalio"),
        requirement("psycopg2-binary"),
        "//library/converter:library_converter",
        "//library/orchestration:library_orchestration",
        "//library/storage:library_rdbms",
        "//library/storage:library_blob",
        "//library/webclient:library_webclient",
        ":service_observation_shared"
    ],
    visibility = ["//visibility:public"]
)

pytest_runner(
    name = "service_observation_workflow_test",
    srcs = [
        "activity_test.py",
        "extractor_test.py"
    ],
    deps = [
        requirement("pytest-asyncio"),
        ":service_observation_workflow"
    ],
    data = [":service_observation_workflow_test_data"]
)

filegroup(
    name = "service_observation_workflow_test_data",
    srcs = glob(["data/test/*.json"]),
    visibility = ["//visibility:private"]
)